implement the endpoints in aws serverless format

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uniswap-api",
+  "name": "@uniswap/api",
   "license": "GPL-3.0-or-later",
   "engines": {
     "node": "12.x"
@@ -17,7 +17,7 @@
     "@graphql-codegen/cli": "1.15.4",
     "@graphql-codegen/typescript": "1.15.4",
     "@graphql-codegen/typescript-operations": "^1.15.4",
-    "@now/node": "^0.10.0",
+    "@types/aws-lambda": "^8.10.59",
     "@types/node-fetch": "^2.3.7",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
@@ -25,7 +25,9 @@
     "eslint-config-prettier": "^6.0.0",
     "graphql": "^15.1.0",
     "prettier": "^1.18.2",
-    "typescript": "^3.5.2"
+    "serverless": "^1.75.1",
+    "serverless-plugin-typescript": "^1.1.9",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "lint:base": "yarn eslint ./src/**/*.ts",
@@ -36,6 +38,7 @@
     "check:lint": "yarn lint:base",
     "check:format": "yarn format:base --check",
     "check:all": "yarn check:lint && yarn check:format",
-    "generate:v2": "graphql-codegen --config src/v2/apollo/codegen.yml"
+    "generate:v2": "graphql-codegen --config src/v2/apollo/codegen.yml",
+    "build": "sls package"
   }
 }
