lower memory size, cloudfront plugin

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-prettier": "^6.0.0",
     "prettier": "^1.18.2",
     "serverless": "^1.75.1",
+    "serverless-api-cloudfront": "^0.9.5",
     "serverless-plugin-typescript": "^1.1.9",
     "typescript": "^3.9.7"
   },
