--- a/serverless.yml
+++ b/serverless.yml
@@ -6,13 +6,25 @@ frameworkVersion: ">=1.75.1 <2.0.0"
 provider:
   name: aws
   runtime: nodejs12.x
-  memorySize: 512 # optional, in MB, default is 1024
+  memorySize: 320 # optional, in MB, default is 1024
   timeout: 12 # optional, in seconds, default is 6
   logRetentionInDays: 1
 
 
 plugins:
   - serverless-plugin-typescript
+  - serverless-api-cloudfront
+
+custom:
+  apiCloudFront:
+    domain: api.uniswap.info
+    certificate: "arn:aws:acm:us-east-1:870337023970:certificate/442d57cb-e33e-45d1-b836-5fd0abd57930"
+    compress: true
+    cookies: none
+    headers: none
+    querystring: none
+    priceClass: PriceClass_100
+    minimumProtocolVersion: TLSv1
 
 functions:
   v1-summary:
