--- a/serverless.yml
+++ b/serverless.yml
@@ -26,6 +26,9 @@ provider:
         - hhKIoosmpJ
         - vKUsOeHgoX
         - dXLuUQNcVD
+        - VieGsbhHec
+        - NTpdZhNBxm
+        - izPomEygRE
     - medium:
         - COINMARKETCAP_API_KEY
         - GbrOiQnhbE
